--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -7,9 +7,12 @@
     <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Styles.Render("~/Content/jquery-ui.css")
     <link rel="stylesheet" href="~/assets/plugins/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/assets/css/main.css">
     <link rel="stylesheet" href="~/assets/css/color_skins.css">
+ 
+    
 </head>
 <body class="theme-black menu_dark">
     @RenderBody()
@@ -99,14 +102,14 @@
             <li>
                 <a href="javascript:void(0);" class="bars"></a>
                 <a class="navbar-brand" href="../../DashBoard/Vista/Dashboard.aspx">
-                    <img src="../../assets/images/LogoCorpKonsilio183x183.png" alt="Corporativo Konsilio">
+                    <img src="~/assets/images/LogoCorpKonsilio183x183.png" alt="Corporativo Konsilio">
                 </a>
             </li>
             <li class="power">
                 <a href="javascript:void(0);" class="menu-sm"><i class="zmdi zmdi-swap"></i></a>
                 <a href="javascript:void(0);" class="fullscreen" data-provide="fullscreen"><i class="zmdi zmdi-fullscreen"></i></a>
                 <a href="javascript:void(0);" class="js-right-sidebar"><i class="zmdi zmdi-settings zmdi-hc-spin"></i></a>
-                <a href="../../Login.aspx" class="mega-menu"><i class="zmdi zmdi-power"></i></a>
+                <a href="@Url.Action("Index", "Home")" class="mega-menu"><i class="zmdi zmdi-power"></i></a>
             </li>
         </ul>
     </aside>
@@ -469,8 +472,8 @@
                         </div>
                     </li>
 
-                    <li class="menu_dark"><a href="/DashBoard/Vista/Dashboard.aspx"><i class="material-icons">dashboard</i> <span class="icon-name">Dashboard</span></a></li>
-                    <li class="menu_dark"><a href="../../Compras/Vistas/Compras.aspx"><i class="material-icons">feedback </i><span class="icon-name">Requisicion</span> </a></li>
+                    <li class="menu_dark"><a href="@Url.Action("Inicio", "Home")"><i class="material-icons">dashboard</i> <span class="icon-name">Dashboard</span></a></li>
+                    <li class="menu_dark"><a href="@Url.Action("Requisiciones", "Requisicion")"><i class="material-icons">feedback </i><span class="icon-name">Requisicion</span> </a></li>
                     <li>
                         <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">shopping_cart</i><span>Compras</span> </a>
                         <ul class="ml-menu">
@@ -487,7 +490,6 @@
                         <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-assignment"></i><span>Inventario</span> </a>
                         <ul class="ml-menu">
                             <li><a href="basic-form-elements.html">Requisiciones</a></li>
-
                         </ul>
                     </li>
                     <li>
@@ -506,8 +508,13 @@
             </div>
         </div>
     </aside>   
-    <script src="../../assets/bundles/libscripts.bundle.js"></script>
-    <script src="../../assets/bundles/vendorscripts.bundle.js"></script>
-    <script src="../../assets/bundles/mainscripts.bundle.js"></script>
+    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/Scripts/jquery-ui.js")
+    @Scripts.Render("~/Scripts/DatePickerReady.js")    
+    <script src="~/assets/bundles/libscripts.bundle.js"></script>
+    <script src="~/assets/bundles/vendorscripts.bundle.js"></script>
+    <script src="~/assets/bundles/mainscripts.bundle.js"></script>
+
 </body>
 </html>
