--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
@@ -131,7 +131,7 @@
                                 </div>
                                 <div class="row clearfix">
                                     <div class="table-responsive">
-                                        <table class="table table table-bordered table-striped table-hover js-basic-example dataTable">
+                                        <table class="table table table-bordered table-striped table-hover js-basic-example dataTable" name="RequisicionProductos">
                                             <thead>
                                                 <tr>
                                                     <td>Gasera</td>
@@ -158,7 +158,7 @@
                                                                     <i class="material-icons">picture_as_pdf</i>
                                                                     <span class="icon-name"></span>
                                                                 </a>
-                                                                <a id="lbDgPDF" href="@Url.Action("Requsiciones", "Requisicion")">
+                                                                <a id="lbDgPDF" href="@Url.Action("RequisicionRevision", "Requisicion", new { Id = req.IdRequisicion })">
                                                                     <i class="material-icons">content_paste</i>
                                                                     <span class="icon-name"></span>
                                                                 </a>
@@ -169,7 +169,7 @@
                                                                     <i class="material-icons">picture_as_pdf</i>
                                                                     <span class="icon-name"></span>
                                                                 </a>
-                                                                <a id="lbAutoriza" href="@Url.Action("Requsiciones", "Requisicion")">
+                                                                <a id="lbAutoriza" href="@Url.Action("Requisicion", "Requisicion", new { Id = req.IdRequisicion })">
                                                                     <i class="material-icons">spellcheck</i>
                                                                     <span class="icon-name"></span>
                                                                 </a>
