--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
@@ -69,7 +69,7 @@
 
                                 </div>
                                 <div class="footer">
-                                    <input id="btnIniciar" type="submit" value="@Url.Action("Requisicion")" class="btn btn-primary btn-round btn-block" />
+                                    <input type="submit" value="Iniciar" class="btn btn-primary btn-round btn-block" />
                                 </div>
                                 @if (Model.Respuesta != null)
                                 {
