--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
@@ -1,4 +1,6 @@
-﻿<section class="content home">
+﻿@using MVC.Presentacion.Models.OrdenCompra;
+@model OrdenesCompraModel 
+<section class="content home">
     <div class="container-fluid">
         <div class="block-header">
             <div class="row clearfix">
