--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisicion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisicion.cshtml
@@ -166,7 +166,14 @@
                                                     {
                                                         foreach (var lst in Model.Productos)
                                                         {
-                                                            <option value="@lst.IdProducto">@lst.Descripcion</option>
+                                                            if (lst.IdProducto.Equals(Model.IdProducto))
+                                                            {
+                                                                <option value="@lst.IdProducto" selected>@lst.Descripcion</option>
+                                                            }
+                                                            else
+                                                            {
+                                                                <option value="@lst.IdProducto">@lst.Descripcion</option>
+                                                            }
                                                         }
                                                     }
                                                 </select>
@@ -176,7 +183,7 @@
                                                     <label> Cantidad: <b id="unidadPord"> </b> </label>
                                                 </b>
                                                 <div class="form-group">
-                                                    <input type="number" id="Cantidad" class="form-control" placeholder="Cantidad" name="Cantidad" />
+                                                    <input type="number" id="Cantidad" class="form-control" placeholder="Cantidad" name="Cantidad" value="@Model.Cantidad" />
                                                 </div>
                                                 @*<asp:Label runat="server" ID="reqCant" CssClass="alert-danger" Visible="false" Text="Campo requerido" />*@
                                             </div>
@@ -185,7 +192,15 @@
                                                 <select class="form-control z-index show-tick selectpicker" data-live-search="true" name="IdCentroCosto">
                                                     @foreach (var lst in Model.CentrosCostos)
                                                     {
+                                                        <option value="0">Seleccione uno</option>
+                                                        if (lst.IdCentroCosto.Equals(Model.IdCentroCosto))
+                                                        {
+                                                            <option value="@lst.IdCentroCosto" selected>@lst.Descripcion</option>
+                                                        }
+                                                        else 
+                                                        {
                                                         <option value="@lst.IdCentroCosto">@lst.Descripcion</option>
+                                                        }
                                                     }
                                                 </select>
                                             </div>
