--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisicion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisicion.cshtml
@@ -1,13 +1,11 @@
 ﻿@using MVC.Presentacion.Models.Requisicion
 @model RequisicionModel
-
 @{
     string EnabledAdminCentral = Convert.ToBoolean(ViewBag.EsAdminCentral).Equals(false) ? "disabled" : "";
     string EnabledEsNueva = Convert.ToBoolean(ViewBag.EsNueva).Equals(true) ? "" : "disabled";
     string txtbutton = ViewBag.BtnCrear == null ? "Crear" : ViewBag.BtnCrear;
     int index = 0;
 }
-
 <link rel="stylesheet" href="~/assets/plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.css" />
 <link href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" rel="stylesheet" />
 <div class="page-loader-wrapper">
@@ -25,7 +23,7 @@
         @if (Model.Productos != null) {
             foreach (var p in Model.Productos) {
             @:ArrProd.push({ id: "@p.IdProducto", unidad: "@p.UnidadMedida" });
-            }
+                                    }
         }
         for (var i = 0; i < ArrProd.length; i += 1) {
             if (ArrProd[i].id == idProd) {
@@ -44,7 +42,7 @@
         @if (Model.Productos != null) {
             foreach (var p in Model.Productos) {
             @:ArrProd.push({ IdProducto: "@p.IdProducto", Descripcion: "@p.Descripcion", IdTipoServicio: "@p.IdProductoServicioTipo" });
-            }
+                                    }
         }
 
         for (var p = 0; p < ArrProd.length; p++) {
@@ -108,11 +106,10 @@
                                             </div>
                                         </div>
                                     </div>
-
                                     <div class="row clearfix z-index" id="divCamposRequi">
                                         <div class="col-lg-3">
                                             <b>Fecha requerida:</b>
-                                            @Html.TextBoxFor(c => c.FechaRequerida, new { id = "datepicker" })
+                                            @Html.TextBoxFor(c => c.FechaRequerida, new { id = "datepicker" });
                                         </div>
                                         <div class="col-lg-3">
                                             <b>Solicitante:</b>
@@ -197,9 +194,9 @@
                                                         {
                                                             <option value="@lst.IdCentroCosto" selected>@lst.Descripcion</option>
                                                         }
-                                                        else 
+                                                        else
                                                         {
-                                                        <option value="@lst.IdCentroCosto">@lst.Descripcion</option>
+                                                            <option value="@lst.IdCentroCosto">@lst.Descripcion</option>
                                                         }
                                                     }
                                                 </select>
@@ -281,51 +278,6 @@
                                             </div>
                                         </div>
                                     }
-
-                                    @*Grid productos revision*@
-                                    @if (Model.RequisicionRevision != null)
-                                    {
-                                        <div class="row clearfix">
-                                            <div class="table-responsive">
-                                                <table id="ProductosRevision" class="table table-hover">
-                                                    <thead>
-                                                        <tr>
-                                                            <td><b>Tipo</b></td>
-                                                            <td><b>Producto</b></td>
-                                                            <td><b>Cantidad</b></td>
-                                                            <td><b>Unidad</b></td>
-                                                            <td><b>Aplicación</b></td>
-                                                            <td><b>Centro de Costo</b></td>
-                                                            <td><b>Almacen</b></td>
-                                                            <td><b>Revision Fisica</b></td>
-
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                        @if (Model.RequisicionRevision.ListaProductos != null)
-                                                        {
-                                                            index = 0;
-                                                            foreach (var item in Model.RequisicionRevision.ListaProductos)
-                                                            {
-                                                                <tr>
-                                                                    <td>@item.TipoProducto</td>
-                                                                    <td>@item.Producto</td>
-                                                                    <td>@item.Cantidad</td>
-                                                                    <td>@item.Unidad</td>
-                                                                    <td>@item.Aplicacion</td>
-                                                                    <td>@item.CentroCosto</td>
-                                                                    <td>@item.CantidadAlmacenActual</td>
-                                                                    <td>@Html.CheckBoxFor(x => x.RequisicionRevision.ListaProductos.ElementAt(index).RevisionFisica)</td>
-                                                                </tr>
-
-                                                                index++;
-                                                            }
-                                                        }
-                                                    </tbody>
-                                                </table>
-                                            </div>
-                                        </div>
-                                    }
                                     @if (Model.RequisicionAutorizacion != null)
                                     {
                                         <div class="row clearfix">
@@ -373,26 +325,7 @@
                                     }
                                     @if (Model.RequisicionEstatus.Equals(RequisicionEstatusEnum.Creada))
                                     {
-                                        <div class="row clearfix">
-                                            <div class="col-lg-12">
-                                                <h2 class="card-inside-title">Opinión de Almacen</h2>
-                                                <div class="row clearfix">
-                                                    <div class="col-sm-12">
-                                                        <div class="form-group">
-                                                            <div class="form-line">
-                                                                <textarea Rows="4" name="OpinionAlmacen" class="form-control no-resize" placeholder="Porfavor escriba su opinion">
-                                                                    @if (ViewBag.reqOpinion != null)
-                                                                    {
-                                                                        @ViewBag.reqOpinion;
-                                                                    }
-                                                                </textarea>
-
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+                                      
                                     }
                                     <div class="row clearfix">
                                         <div class="col-lg-4 col-md-8 text-center">
@@ -410,8 +343,6 @@
                                             <a href="#ModalConfirmacion" data-toggle="modal" id="btnok" data-target="#ModalConfirmacion" class="btn btn-raised btn-primary btn-round @Convert.ToBoolean(ViewBag.EsNueva) ? 'disabled' : ''">
                                                 @txtbutton
                                             </a>
-
-
                                         </div>
                                     </div>
                                     <div>
@@ -454,7 +385,25 @@
                         <h4 class="title" id="ModalConfirmacionLabel">¿Esta seguro?</h4>
                     </div>
                     <div class="modal-footer">
-                        <input type="submit" value="Si" formaction="CrearRequisicion" class="btn btn-raised btn-primary btn-round waves-effect" />
+                        @if (ViewBag.OtraAccion == null)
+                        {
+                            <input type="submit" value="Si" formaction="CrearRequisicion" class="btn btn-raised btn-primary btn-round waves-effect" />
+                        }
+                        else
+                        {
+                            if (ViewBag.OtraAccion == "R")
+                            {                                
+                                <input type="submit" value="Si" formaction="Revision" class="btn btn-raised btn-primary btn-round waves-effect" />
+                            }
+                            else
+                            {
+                                @*<a href="@Url.Action("Revision", "Requisicion")"  class="btn btn-raised btn-primary btn-round" >
+                                    Si
+                                </a>*@
+                                @*<input type="submit" value="Si" formaction='@Url.Action("Revision", "Requisicion")' class="btn btn-raised btn-primary btn-round waves-effect" />*@
+                                @*<input type="submit" value="Si" formaction="CrearRequisicion" class="btn btn-raised btn-primary btn-round waves-effect" />*@
+                            }
+                        }
                         <button type="button" class="btn btn-danger btn-simple btn-round waves-effect" data-dismiss="modal">Cancelar</button>
                     </div>
                 </div>
