--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
@@ -158,7 +158,7 @@
                                                                     <i class="material-icons">picture_as_pdf</i>
                                                                     <span class="icon-name"></span>
                                                                 </a>
-                                                                <a id="lbDgPDF" href="@Url.Action("RequisicionAlternativa", "Requisicion", new { Id = req.IdRequisicion, estatus = req.IdRequisicionEstatus })">
+                                                                <a id="lbDgPDF" href="@Url.Action("RequisicionRevision", "Requisicion", new { Id = req.IdRequisicion, estatus = req.IdRequisicionEstatus })">
                                                                     <i class="material-icons">content_paste</i>
                                                                     <span class="icon-name"></span>
                                                                 </a>
