--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_recarga_camioneta.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_recarga_camioneta.xml
@@ -6,51 +6,65 @@
     android:orientation="vertical"
     tools:context=".Activity.RecargaCamionetaActivity">
 
-    <TextView
-        android:id="@+id/TVRecargaCamionetaActivityTitulo"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:paddingBottom="15dp"
-        android:paddingTop="25dp"
-        android:text="@string/Recarga_de_gas"
-        android:textAlignment="center"
-        android:textColor="@color/colorTextLogin"
-        android:textSize="30sp" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/TVRecargaCamionetaActivityTituloCamionetas"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:paddingTop="25dp"
-        android:text="@string/Selecciona_la_camioneta"
-        android:textSize="24sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <Spinner
-        android:id="@+id/SRecargaCamionetaActivityListaCamionetas"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:padding="25dp" />
+            <TextView
+                android:id="@+id/TVRecargaCamionetaActivityTitulo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:paddingBottom="15dp"
+                android:paddingTop="25dp"
+                android:text="@string/Recarga_de_gas"
+                android:textAlignment="center"
+                android:textColor="@color/colorTextLogin"
+                android:textSize="30sp" />
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="85sp" />
+            <TextView
+                android:id="@+id/TVRecargaCamionetaActivityTituloCamionetas"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:paddingTop="25dp"
+                android:text="@string/Selecciona_la_camioneta"
+                android:textSize="24sp" />
 
-    <Button
-        android:id="@+id/BRecargaCamionetaActivityGuardar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="85dp"
-        android:layout_marginRight="85dp"
-        android:text="@string/message_acept"
-        android:textColor="@color/colorTextButtonLogin"
-        android:backgroundTint="@color/colorButtonLogin"
-        android:textSize="30sp"
-        tools:ignore="UnusedAttribute" />
+            <Spinner
+                android:id="@+id/SRecargaCamionetaActivityListaCamionetas"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:padding="25dp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="85sp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp" />
+
+            <Button
+                android:id="@+id/BRecargaCamionetaActivityGuardar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="85dp"
+                android:layout_marginRight="85dp"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="@color/colorButtonLogin"
+                android:text="@string/message_acept"
+                android:textColor="@color/colorTextButtonLogin"
+                android:textSize="30sp"
+                tools:ignore="UnusedAttribute" />
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
