JSA-Commite de seguridad

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
@@ -199,50 +199,7 @@
                                     </table>
                                 </div>
                             </div>
-                            @*<div class="row clearfix" id="divAutorizarOC">
-                                            <div class="body table-responsive">
-                                                <table class="table table-hover">
-                                                    <thead>
-                                                        <tr>
-                                                            <td><b>Tipo</b></td>
-                                                            <td><b>Producto</b></td>
-                                                            <td><b>Requeridos</b></td>
-                                                            <td><b>Unidad</b></td>
-                                                            <td><b>Detalle</b></td>
-                                                            <td><b>Centro de costo</b></td>
-                                                            <td><b>Cuenta Contable</b></td>
-                                                            <td><b>Cantidad</b></td>
-                                                            <td><b>Precio</b></td>
-                                                            <td><b>%Desc</b></td>
-                                                            <td><b>%IVA</b></td>
-                                                            <td><b>%IEPS</b></td>
-                                                            <td><b>Importe</b></td>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                        @foreach (var prod in Model.OrdenCompraProductos)
-                                                        {
-                                                            <tr>
-                                                                <td>@prod.TipoProducto</td>
-                                                                <td>@prod.Producto</td>
-                                                                <td>@prod.CantidadAComprar</td>
-                                                        <td>@prod.Unidad</td>
-                                                        <td>@prod.Aplicacion</td>
-                                                        <td>@prod.CentroCosto</td>
-                                                        <td>@prod.IdCuentaContable</td>
-                                                        <td>@prod.CantidadAComprar</td>
-                                                        <td>@prod.Precio</td>
-                                                        <td>@prod.Descuento</td>
-                                                        <td>@prod.IVA</td>
-                                                        <td>@prod.IEPS</td>
-                                                        <td>@prod.Importe</td>
-                                                    </tr>
-                                                        }
-                                                    </tbody>
-                                                </table>
-                                            </div>
-                                        </div>
-                                        <div class="row clearfix" id="divEntrada">
+                            @*<div class="row clearfix" id="divEntrada">
                                             <div class="body table-responsive">
                                                 <table class="table table-hover">
                                                     <thead>
