--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraAutorizacion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraAutorizacion.cshtml
@@ -1,8 +1,18 @@
-﻿<!DOCTYPE html>
+﻿@model MVC.Presentacion.Models.OrdenCompra.OrdenCompraAutorizacionModel
+<!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>OrdenCompraAutorizacion</title>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("#btnFinalizar").click(function () {
+                var form = $(this).parent("form");
+                form.attr('action', '<%= Url.RouteUrl(new { Controller = "OrdenCompra", Action = "Autorizacion" }) %>');
+                form.attr('method', 'post');
+            });
+        });
+    </script>
 </head>
 <body>
     <section class="content home">
@@ -23,14 +33,14 @@
                     <div class="row clearfix">
                         <div class="col-sm-4">
                             <div class="form-group">
-                                <label> @Model.NombreEmpresa</label>
+                                <label> @Model.Empresa</label>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group">
                                 <div class="input-group">
                                     <b>Número de Requisición:</b>&nbsp;
-                                    <label> @Model.NumRequisicion</label>
+                                    <label> @Model.NumeroRequisicion</label>
                                 </div>
                                 <div class="input-group">
                                     <b>Número de Orden de Compra:</b>&nbsp;
@@ -49,13 +59,13 @@
                         <div class="col-lg-3 col-md-12">
                             <div class="form-group form-float">
                                 <b>Solicitante:</b>
-                                <input name="Solicitante" value="@Model.Solicitante" class="form-control disabled" />
+                                <input name="Solicitante" value="@Model.usuarioSolicitante" class="form-control disabled" />
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-12 form-float">
                             <div class="form-group">
                                 <b>Motivo de compra:</b>
-                                <textarea name="MotivoCompra" class="form-control  no-resize disabled" placeholder="Error de carga" rows="4">@Model.MotivoCompra</textarea>
+                                <textarea name="MotivoCompra" class="form-control  no-resize disabled" placeholder="Error de carga" rows="4">@Model.MotivoRequisicion</textarea>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-12">
@@ -81,6 +91,18 @@
                         </div>
                     </div>
                     <div class="row clearfix">
+                        <div class="body table-responsive">
+                            <table class="table table-hover">
+                                <thead>
+
+                                </thead>
+                                <tbody>
+                                    @Html.EditorForModel(Model.Productos)
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="row clearfix">
                         <div id="divMensajeError" class="container">
                             <div class="alert alert-danger">
                                 <div class="alert-icon">
@@ -92,9 +114,78 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row clearfix">
+                        <div class="col-sm-4 center">
+                            <asp:Button ID="btnRegresar" CssClass="btn btn-raised btn-primary btn-round" Text="Regresar" OnClick="btnRegresar_Click" />
+                        </div>
+                        <div class="col-sm-4 center">
+                            <a href="#ModalCancelar" data-toggle="modal" id="btnCancel" data-target="#ModalCancelar" class="btn btn-raised btn-primary btn-round disabled">
+                                Cancelar
+                            </a>
+                        </div>
+                        <div class="col-sm-4 center">
+                            <a href="#ModalConfirmacion" data-toggle="modal" id="btnok" data-target="#ModalConfirmacion" class="btn btn-raised btn-primary btn-round ">
+                                Autorizar
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+    <div class="modal fade" id="ModalConfirmacion" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-sm margin-0" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="title" id="ModalConfirmacionLabel">¿Esta seguro?</h4>
+                </div>
+                <div class="modal-footer">
+                    <input type="submit" value="Si" id="btnCrear" class="btn btn-raised btn-primary btn-round" />
+
+                    <button type="button" class="btn btn-danger btn-simple btn-round waves-effect" data-dismiss="modal">Cancelar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="ModalCancelar" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="title" id="ModalCancelarLabel">Motivo de cancelcion</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="body">
+                        <div class="col-sm-12">
+                            <asp:TextBox ID="txtMotivoCancela" TextMode="MultiLine" CssClass="form-control tex" Rows="5" placeholder="Cual es el motivo de la cancelacion..."></asp:TextBox>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <asp:Button ID="btnCancelar" CssClass="btn btn-raised btn-primary btn-round" Text="Cancelar" OnClick="btnCancelar_Click" Enabled="false" />
+                    <button type="button" class="btn btn-danger btn-simple btn-round waves-effect" data-dismiss="modal">Regresar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="ModalMensaje" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="title" id="ModalMensajeLabel">Orden de Compra exitosa</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="body">
+                        <div class="col-sm-12">
+                            <asp:Label ID="lblMensajeOrdenCompra" TextMode="MultiLine" />
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <asp:Button ID="btnCrear12" CssClass="btn btn-raised btn-primary btn-round" Text="Crear" OnClick="BtnCrear_Click" />
+                    <button type="button" class="btn btn-danger btn-simple btn-round waves-effect" data-dismiss="modal">Regresar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
