--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -495,12 +495,10 @@
                         <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-grid"></i><span>Catalogos</span></a>
                         <ul class="ml-menu">
                             <li><a href="../../Catalogos/Vista/Proveedor.aspx">Proveedores</a></li>
-                            <li><a href="table-color.html">Clientes</a></li>
-                            <li><a href="../../Catalogos/Vista/CuentasContables.aspx">Cuentas contables</a></li>
-                            <li><a href="../../Catalogos/Vista/CentrosCosto.aspx">Centro de costos</a></li>
+                            <li>@Html.ActionLink("Centros de costos", "CentroCosto", "CentroCosto")</li>
+                            <li>@Html.ActionLink("Cuentas contables", "CuentaContable", "CuentaContable")</li>                          
                             <li><a href="table-filter.html">Puntos de venta</a></li>
-                            <li><a href="table-filter.html">Equipo de transporte</a></li>
-                            @*<li><a href="../../Catalogos/Vista/Empresas.aspx">Gaseras</a></li>*@
+                            <li><a href="table-filter.html">Equipo de transporte</a></li>                       
                             <li>@Html.ActionLink("Gaseras", "Index", "Empresas")</li>
                         </ul>
                     </li>
